--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,24 +7,24 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-        }
+    lintOptions {
+        warning 'InvalidPackage'
     }
-
 }
 
 dependencies {
+    implementation "com.facebook.react:react-native:+"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.3.0'
     implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.9.1@aar'
-    implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
 }
