--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation "com.android.support:design:27.1.1"
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.3.0'
     implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.9.1@aar'
