--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,11 +20,17 @@ android {
     }
 }
 
+final OK_HTTP = '3.3.1'
+final RETROFIT_VERSION = '2.1.0'
+
 dependencies {
     implementation "com.facebook.react:react-native:+"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation "com.android.support:design:27.1.1"
+    implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
+    implementation "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
+    implementation "com.squareup.okhttp3:okhttp:$OK_HTTP"
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.3.0'
     implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.9.1@aar'
