--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$OK_HTTP"
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.3.0'
-    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.9.1@aar'
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+    implementation project(path: ':webprintmodule')
 }
